This this the changelog file for the Pothos C++ library.

Release 0.5.1 (pending)
==========================

- Added missing functional include for Remote/Server.cpp
- Exception handling for EvalEnvironment::registerConstantObj()
- Fixed memory leak in Util FileLock implementation

Release 0.5.0 (2017-04-27)
==========================

- BlockEval API changes to support GUI evaluator
- DocUtils API changes to support GUI docs query
- Removed the pothos-serialization dependency and
  replaced it with a much smaller in-library solution.
  The serialization format has changed for this release.
- Switch stdio to end of line flushing for logging
- Added Plugin path API for concatenating two paths
- Added API for parsing sources for block descriptions
- Created configuration-file based loader for plugins:
    - With built-in loader for JSON topologies
    - With built-in loader for JIT compilation
    - With built-in loader for block descriptions
- Added PluginModule boolean operator for checking null
- Reimplemented compiler support around file paths
- Reimplemented QFormat for simplification and warnings

Release 0.4.3 (2017-04-23)
==========================

- Fixed RemoteServer process arguments for some shells
- Fix copy/paste typo in DeviceInfoUtils registration

Release 0.4.2 (2017-01-26)
==========================

- Fix expression parser for nested parenthesized functions
- Added missing ProxyEnvironment calls to managed registry
- Added missing BufferChunk calls to managed registry
- RemoteServer should wait() on process after terminate
- Added missing Block::isActive to managed registry
- Fixed typo in PothosConfig.cmake for include check
- PothosUtil option argument for --proxy-server

Release 0.4.1 (2016-09-26)
==========================

- Update internal poco submodule to track poco-1.7.5
- Dynamic environment variables for snappy packages
- Fixed output port reserve handling for empty managers
- Fix warnings for doxygen generated documentation