@@ -144,6 +144,11 @@ static std::vector<CodeBlock> extractContiguousBlocks(std::istream &is)
         {
             lineNo++; //starts at 1
             std::getline(is, line);
+
+            //This strips the remaining carriage return
+            //left when getline uses the unix newline locale,
+            //and the file is using  windows style newlines.
+            if (line.back() == '\r') line.pop_back();
         }
         partial.clear();
         if (line.empty()) continue;
